--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
@@ -117,7 +117,13 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <data name="Black" xml:space="preserve">
+    <value>Black</value>
+  </data>
   <data name="Root" xml:space="preserve">
     <value>Root</value>
+  </data>
+  <data name="Start" xml:space="preserve">
+    <value>Start</value>
   </data>
 </root>
