--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/InBoolKeys.resx
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/InBoolKeys.resx
@@ -117,31 +117,109 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
-  <data name="Root_本车信息" xml:space="preserve">
-    <value>Root-本车信息</value>
+  <data name="InBF1按键按下" xml:space="preserve">
+    <value>F1按键按下</value>
   </data>
-  <data name="Root_本车信息_轴温信息" xml:space="preserve">
-    <value>Root-本车信息-轴温信息</value>
+  <data name="InBF2按键按下" xml:space="preserve">
+    <value>F2按键按下</value>
   </data>
-  <data name="Root_本车信息_轴温信息_温升信息" xml:space="preserve">
-    <value>Root-本车信息-轴温信息-温升信息</value>
+  <data name="InBF3按键按下" xml:space="preserve">
+    <value>F3按键按下</value>
   </data>
-  <data name="Root_本车信息_辅助功能" xml:space="preserve">
-    <value>Root-本车信息-辅助功能</value>
+  <data name="InBF4按键按下" xml:space="preserve">
+    <value>F4按键按下</value>
   </data>
-  <data name="Root_本车信息_辅助功能_亮度调节" xml:space="preserve">
-    <value>Root-本车信息-辅助功能-亮度调节</value>
+  <data name="InBF5按键按下" xml:space="preserve">
+    <value>F5按键按下</value>
   </data>
-  <data name="Root_本车信息_辅助功能_切除查询" xml:space="preserve">
-    <value>Root-本车信息-辅助功能-切除查询</value>
+  <data name="InB惰转工况" xml:space="preserve">
+    <value>惰转工况</value>
   </data>
-  <data name="Root_本车信息_辅助功能_切除查询_履历" xml:space="preserve">
-    <value>Root-本车信息-辅助功能-切除查询-履历</value>
+  <data name="InB牵引工况" xml:space="preserve">
+    <value>牵引工况</value>
   </data>
-  <data name="Root_本车信息_辅助功能_切除查询_故障切除" xml:space="preserve">
-    <value>Root-本车信息-辅助功能-切除查询-故障切除</value>
+  <data name="InB制动工况" xml:space="preserve">
+    <value>制动工况</value>
   </data>
-  <data name="Root_重连信息" xml:space="preserve">
-    <value>Root-重连信息</value>
+  <data name="InB自负荷工况" xml:space="preserve">
+    <value>自负荷工况</value>
+  </data>
+  <data name="InB加载后界面切换" xml:space="preserve">
+    <value>加载后界面切换</value>
+  </data>
+  <data name="InB柴油机0位" xml:space="preserve">
+    <value>柴油机--0位</value>
+  </data>
+  <data name="InB柴油机1位" xml:space="preserve">
+    <value>柴油机--1位</value>
+  </data>
+  <data name="InB柴油机2位" xml:space="preserve">
+    <value>柴油机--2位</value>
+  </data>
+  <data name="InB柴油机3位" xml:space="preserve">
+    <value>柴油机--3位</value>
+  </data>
+  <data name="InB柴油机4位" xml:space="preserve">
+    <value>柴油机--4位</value>
+  </data>
+  <data name="InB柴油机5位" xml:space="preserve">
+    <value>柴油机--5位</value>
+  </data>
+  <data name="InB柴油机6位" xml:space="preserve">
+    <value>柴油机--6位</value>
+  </data>
+  <data name="InB柴油机7位" xml:space="preserve">
+    <value>柴油机--7位</value>
+  </data>
+  <data name="InB柴油机8位" xml:space="preserve">
+    <value>柴油机--8位</value>
+  </data>
+  <data name="InB柴油机9位" xml:space="preserve">
+    <value>柴油机--9位</value>
+  </data>
+  <data name="InB柴油机10位" xml:space="preserve">
+    <value>柴油机--10位</value>
+  </data>
+  <data name="InB柴油机11位" xml:space="preserve">
+    <value>柴油机--11位</value>
+  </data>
+  <data name="InB柴油机12位" xml:space="preserve">
+    <value>柴油机--12位</value>
+  </data>
+  <data name="InB柴油机13位" xml:space="preserve">
+    <value>柴油机--13位</value>
+  </data>
+  <data name="InB柴油机14位" xml:space="preserve">
+    <value>柴油机--14位</value>
+  </data>
+  <data name="InB柴油机15位" xml:space="preserve">
+    <value>柴油机--15位</value>
+  </data>
+  <data name="InB柴油机16位" xml:space="preserve">
+    <value>柴油机--16位</value>
+  </data>
+  <data name="InB机车牵引" xml:space="preserve">
+    <value>机车牵引</value>
+  </data>
+  <data name="InB机车惰转" xml:space="preserve">
+    <value>机车惰转</value>
+  </data>
+  <data name="InB机车电制" xml:space="preserve">
+    <value>机车电制</value>
+  </data>
+  <data name="InB重联屏故障黑屏" xml:space="preserve">
+    <value>重联屏故障黑屏</value>
+  </data>
+  <data name="InB本车工作正常" xml:space="preserve">
+    <value>本车工作正常</value>
+  </data>
+  <data name="InB他车工作正常" xml:space="preserve">
+    <value>他车工作正常</value>
+  </data>
+  <data name="InB重阀位置1" xml:space="preserve">
+    <value>重阀位置1</value>
+  </data>
+  <data name="InB重阀位置2" xml:space="preserve">
+    <value>重阀位置2</value>
   </data>
 </root>
