1.添加切除查询，故障切除界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
@@ -120,6 +120,9 @@
   <data name="Root_本车信息" xml:space="preserve">
     <value>Root-本车信息</value>
   </data>
+  <data name="Root_本车信息_同屏方式" xml:space="preserve">
+    <value>Root-本车信息-同屏方式</value>
+  </data>
   <data name="Root_本车信息_轴温信息" xml:space="preserve">
     <value>Root-本车信息-轴温信息</value>
   </data>
