1.添加双车同屏界面

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
@@ -123,6 +123,15 @@
   <data name="Root_本车信息_同屏方式" xml:space="preserve">
     <value>Root-本车信息-同屏方式</value>
   </data>
+  <data name="Root_本车信息_同屏方式_他车同屏" xml:space="preserve">
+    <value>Root-本车信息-同屏方式-本车同屏</value>
+  </data>
+  <data name="Root_本车信息_同屏方式_双车同屏" xml:space="preserve">
+    <value>Root-本车信息-同屏方式-双车同屏</value>
+  </data>
+  <data name="Root_本车信息_同屏方式_本车同屏" xml:space="preserve">
+    <value>Root-本车信息-同屏方式-本车同屏</value>
+  </data>
   <data name="Root_本车信息_轴温信息" xml:space="preserve">
     <value>Root-本车信息-轴温信息</value>
   </data>
