1.修改中英文切换

--- a/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
+++ b/Train/Engine.TCMS.Turkmenistan/Src/Engine.TCMS.Turkmenistan/Resources/Keys/StateKeys.resx
@@ -156,4 +156,37 @@
   <data name="Root_重连信息" xml:space="preserve">
     <value>Root-重连信息</value>
   </data>
+  <data name="Root_重连信息_同屏方式" xml:space="preserve">
+    <value>Root-重连信息-同屏方式</value>
+  </data>
+  <data name="Root_重连信息_同屏方式_他车同屏" xml:space="preserve">
+    <value>Root-重连信息-同屏方式-本车同屏</value>
+  </data>
+  <data name="Root_重连信息_同屏方式_双车同屏" xml:space="preserve">
+    <value>Root-重连信息-同屏方式-双车同屏</value>
+  </data>
+  <data name="Root_重连信息_同屏方式_本车同屏" xml:space="preserve">
+    <value>Root-重连信息-同屏方式-本车同屏</value>
+  </data>
+  <data name="Root_重连信息_轴温信息" xml:space="preserve">
+    <value>Root-重连信息-轴温信息</value>
+  </data>
+  <data name="Root_重连信息_轴温信息_温升信息" xml:space="preserve">
+    <value>Root-重连信息-轴温信息-温升信息</value>
+  </data>
+  <data name="Root_重连信息_辅助功能" xml:space="preserve">
+    <value>Root-重连信息-辅助功能</value>
+  </data>
+  <data name="Root_重连信息_辅助功能_亮度调节" xml:space="preserve">
+    <value>Root-重连信息-辅助功能-亮度调节</value>
+  </data>
+  <data name="Root_重连信息_辅助功能_切除查询" xml:space="preserve">
+    <value>Root-重连信息-辅助功能-切除查询</value>
+  </data>
+  <data name="Root_重连信息_辅助功能_切除查询_履历" xml:space="preserve">
+    <value>Root-重连信息-辅助功能-切除查询-履历</value>
+  </data>
+  <data name="Root_重连信息_辅助功能_切除查询_故障切除" xml:space="preserve">
+    <value>Root-重连信息-辅助功能-切除查询-故障切除</value>
+  </data>
 </root>
