--- a/Platform/Src/MMI.Platform/MMI_PublicApp/Changes.txt
+++ b/Platform/Src/MMI.Platform/MMI_PublicApp/Changes.txt
@@ -1,7 +1,9 @@
 注：此文件中的版本代表应用程序的版本，应用程序版本是所有库的最高版本，例如：MMI.Facility.DataType的版本如果为2.3.0.0， MMI.Facility.PublicUI的版本为2.4.0.0的话，
 MMI_PublicApp.exe的版本为2.4.0.0，当然也有可能出现MMI_PublicApp.exe的版本为2.5.0.0(当MMI_PublicApp.exe发生改动时）
 
-
+2.50.2017.0214  2.50.2017.0619
+===============================
+- feature : 增加ConditionContentConverter
 
 2.50.2017.0214  2.50.2017.0405
 ===============================
