--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Keys/StateKeys.resx
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Keys/StateKeys.resx
@@ -120,7 +120,10 @@
   <data name="Root" xml:space="preserve">
     <value>Root</value>
   </data>
-  <data name="Root_紧急广播" xml:space="preserve">
-    <value>Root-紧急广播</value>
+  <data name="Root_Layout2" xml:space="preserve">
+    <value>Root-Layout2</value>
+  </data>
+  <data name="Root_Layout3" xml:space="preserve">
+    <value>Root-Layout3</value>
   </data>
 </root>
