撒旦能死啊

--- a/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Keys/OubKeys.resx
+++ b/V2/Train/Urban.GuiYang.DDU/Src/Urban.GuiYang.DDU/Resources/Keys/OubKeys.resx
@@ -132,4 +132,13 @@
   <data name="OubPIS循环" xml:space="preserve">
     <value>PIS/循环</value>
   </data>
+  <data name="OubPIS下一站" xml:space="preserve">
+    <value>PIS/下一站</value>
+  </data>
+  <data name="OubPIS到达站" xml:space="preserve">
+    <value>PIS/到达站</value>
+  </data>
+  <data name="OubPIS发车" xml:space="preserve">
+    <value>PIS/发车</value>
+  </data>
 </root>
